# algokit-management-tool

./: README.md  pbcopy
app/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.json
app/deploy/: Dockerfile  nginx.conf
app/src/: App.tsx  config-context.tsx  routeTree.gen.ts
backend-app/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  node.py  pyproject.toml
backend-app/.devcontainer/: devcontainer.json
backend-app/app/: config.py  main.py
backend-app/app/api/: changelog.py  dependencies.py  functional_specs.py  github.py  issues.py  outdated.py  pipelines.py  pull_requests.py  releases.py  slack.py
backend-app/app/core/: config.py  logging.py
backend-app/app/services/changelog/: __init__.py  generator.py  git_utils.py  models.py
backend-app/app/services/dependencies/: js_package.py  main.py  python_module.py  utils.py  validate.py
backend-app/app/services/functional_specs/: tree.py
backend-app/app/services/issues/: github.py
backend-app/app/services/outdated/: __init__.py  dependency_checker.py
backend-app/app/services/pipelines/: __init__.py  github.py
backend-app/app/services/pull_requests/: github.py
backend-app/app/services/releases/: __init__.py  github.py
backend-app/app/services/slack/: integrator.py  integrator.py, lines=363-369
backend-app/app/utils/: github.py  storage.py
cloud-functions/: .gitignore
retrieve/: config.py  dependencies.json  pyproject.toml  retrieve.py  validate.py
retrieve/ingest/: build_tree.py  js_package.py  python_module.py  (+1 more)
(+56 files in other folders)
